--- a/app/src/main/res/layout/toolbar_samocat.xml
+++ b/app/src/main/res/layout/toolbar_samocat.xml
@@ -6,14 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/colorPrimaryDark"
-    android:contentInsetLeft="0dp"
     android:contentInsetStart="0dp"
+    android:contentInsetLeft="0dp"
     app:contentInsetLeft="0dp"
-    app:contentInsetStart="0dp" >
+    app:contentInsetStart="0dp">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -38,10 +38,10 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/search"
             android:layout_marginEnd="16dp"
+            android:contentDescription="@string/search"
+            android:src="@drawable/search"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="@string/search" />
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.appcompat.widget.Toolbar>
